crates/ika-protocol-config/src/snapshots/ika_protocol_config__test__Testnet_version_1.snap
---
source: crates/ika-protocol-config/src/lib.rs
assertion_line: 686
expression: "ProtocolConfig::get_for_version(cur, *chain_id)"
---
version: 1
feature_flags:
  mysticeti_num_leaders_per_round: 1
  bls_checkpoints: true
max_messages_per_dwallet_checkpoint: 500
max_messages_per_system_checkpoint: 500
max_dwallet_checkpoint_size_bytes: 51200
max_system_checkpoint_size_bytes: 51200
buffer_stake_for_protocol_upgrade_bps: 5000
min_dwallet_checkpoint_interval_ms: 200
min_system_checkpoint_interval_ms: 200
consensus_bad_nodes_stake_threshold: 20
consensus_max_transaction_size_bytes: 315218930
consensus_max_num_transactions_in_block: 512
consensus_max_transactions_in_block_bytes: 315218930
